tests/ui/deriving/skip/derive-skip-invalid.stderr
error: incorrect usage of the `#[skip]` attribute
  --> $DIR/derive-skip-invalid.rs:5:24
   |
LL | struct KeyVal(#[skip = "Debug"] usize);
   |                        ^^^^^^^
   |
note: the `#[skip]` attribute accepts an optional list of traits
  --> $DIR/derive-skip-invalid.rs:5:24
   |
LL | struct KeyVal(#[skip = "Debug"] usize);
   |                        ^^^^^^^
help: try using `#[skip]` or `#[skip(Trait)]`
  --> $DIR/derive-skip-invalid.rs:5:24
   |
LL | struct KeyVal(#[skip = "Debug"] usize);
   |                        ^^^^^^^

error: incorrect usage of the `#[skip]` attribute
  --> $DIR/derive-skip-invalid.rs:10:22
   |
LL | struct BadArg(#[skip("Debug")] usize);
   |                      ^^^^^^^
   |
note: the `#[skip]` attribute accepts an optional list of traits
  --> $DIR/derive-skip-invalid.rs:10:22
   |
LL | struct BadArg(#[skip("Debug")] usize);
   |                      ^^^^^^^
help: try using `#[skip]` or `#[skip(Trait)]`
  --> $DIR/derive-skip-invalid.rs:10:22
   |
LL | struct BadArg(#[skip("Debug")] usize);
   |                      ^^^^^^^

warning: the `#[skip]` attribute does not support this trait
  --> $DIR/derive-skip-invalid.rs:21:26
   |
LL | struct SkipClone2(#[skip(Clone)] usize);
   |                          ^^^^^
   |
   = help: the supported traits are `PartialEq`, `PartialOrd`, `Ord`, `Hash`, `Debug`
   = note: `#[warn(unsupported_derive_skip)]` on by default

warning: the `#[skip]` attribute does not support this trait
  --> $DIR/derive-skip-invalid.rs:21:26
   |
LL | struct SkipClone2(#[skip(Clone)] usize);
   |                          ^^^^^
   |
   = help: the supported traits are `PartialEq`, `PartialOrd`, `Ord`, `Hash`, `Debug`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors; 2 warnings emitted

